[gd_scene load_steps=17 format=3 uid="uid://cay4brftcbq2d"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_4ylpk"]
[ext_resource type="Script" path="res://Level1.gd" id="1_6macq"]
[ext_resource type="Texture2D" uid="uid://70kcqammrbwt" path="res://output-onlinepngtools.png" id="2_rqndt"]
[ext_resource type="Script" path="res://StaticBody2D.gd" id="3_g7sjx"]
[ext_resource type="Script" path="res://Player2.gd" id="4_jd05b"]
[ext_resource type="Script" path="res://StaticBody2D1Way.gd" id="5_sifwv"]
[ext_resource type="AudioStream" uid="uid://c134l5r7wuqr2" path="res://sonictunnels.mp3" id="6_0j80b"]
[ext_resource type="Script" path="res://AudioStreamPlayer2D.gd" id="7_haoy3"]
[ext_resource type="PackedScene" uid="uid://p68ird8gqive" path="res://Coin.tscn" id="8_udxdr"]
[ext_resource type="Script" path="res://Coin Label.gd" id="9_mxq74"]
[ext_resource type="PackedScene" uid="uid://k2nsqivb8uyy" path="res://Gate.tscn" id="10_k3xxh"]
[ext_resource type="Script" path="res://Countdown.gd" id="12_jrogi"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xjtfc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4lop1"]
radius = 185.714
height = 740.426

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gofj3"]

[sub_resource type="Environment" id="Environment_dgy7q"]
background_mode = 3
glow_enabled = true
glow_intensity = 3.17
glow_strength = 1.05
glow_bloom = 0.35
glow_blend_mode = 1

[node name="Node2D" type="Node2D"]
position = Vector2(789, 624)
script = ExtResource("1_6macq")

[node name="Line2D" type="Line2D" parent="."]
modulate = Color(0.321569, 0.568627, 0.933333, 1)
material = SubResource("CanvasItemMaterial_xjtfc")
points = PackedVector2Array(-1000, 0, 1000, 0)
width = 3.0
default_color = Color(0.340479, 0.604959, 0.99047, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="Line2D"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Line2D/StaticBody2D"]
polygon = PackedVector2Array(-1000, 0, 0, 0, 1000, 0)

[node name="Player1" type="CharacterBody2D" parent="."]
position = Vector2(-27.0001, -23)
scale = Vector2(0.1, 0.07)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_4ylpk")

[node name="BikeSprite" type="Sprite2D" parent="Player1"]
scale = Vector2(1, 1)
texture = ExtResource("2_rqndt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
position = Vector2(-1.14441e-05, 42.8571)
rotation = -1.56294
scale = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_4lop1")

[node name="RearRayCast2D" type="RayCast2D" parent="Player1"]
position = Vector2(-240, 228.571)
target_position = Vector2(0, 250)
collision_mask = 3
collide_with_areas = true

[node name="FrontRayCast2D" type="RayCast2D" parent="Player1"]
position = Vector2(240, 228.571)
scale = Vector2(1, 1)
target_position = Vector2(0, 250)
collision_mask = 3
collide_with_areas = true

[node name="Ramp1" type="StaticBody2D" parent="."]
position = Vector2(-455, -103)
collision_layer = 3
collision_mask = 3
script = ExtResource("3_g7sjx")

[node name="Line2D" type="Line2D" parent="Ramp1"]
points = PackedVector2Array(-210, 101, -1, 1)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1, -1)
script = ExtResource("3_g7sjx")

[node name="Line2D" type="Line2D" parent="StaticBody2D"]
position = Vector2(-2, 3)
points = PackedVector2Array(-138, 0, -138, -103)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-455, -104)
script = ExtResource("3_g7sjx")

[node name="Line2D" type="Line2D" parent="StaticBody2D2"]
position = Vector2(2, -1)
points = PackedVector2Array(317, 2, -3, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="Player2" type="CharacterBody2D" parent="."]
position = Vector2(280, -23)
scale = Vector2(0.1, 0.07)
collision_layer = 3
collision_mask = 3
script = ExtResource("4_jd05b")

[node name="BikeSprite" type="Sprite2D" parent="Player2"]
material = SubResource("CanvasItemMaterial_gofj3")
scale = Vector2(1, 1)
texture = ExtResource("2_rqndt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(-1.14441e-05, 42.8571)
rotation = -1.56294
scale = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_4lop1")

[node name="RearRayCast2D" type="RayCast2D" parent="Player2"]
position = Vector2(-240, 228.571)
target_position = Vector2(0, 250)
collision_mask = 3
collide_with_areas = true

[node name="FrontRayCast2D" type="RayCast2D" parent="Player2"]
position = Vector2(240, 228.571)
scale = Vector2(1, 1)
target_position = Vector2(0, 250)
collision_mask = 3
collide_with_areas = true

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(169, -58)
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D3"]
position = Vector2(-1, 0)
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2(-137, -60)
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D4"]
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2(168, -168)
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D5"]
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(168, -168)
stream = ExtResource("6_0j80b")
volume_db = -8.345
autoplay = true
script = ExtResource("7_haoy3")

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2(-1, -236)
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D6"]
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D7" type="StaticBody2D" parent="."]
position = Vector2(-97, -344)
rotation = 0.655974
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D7"]
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_dgy7q")

[node name="StaticBody2D8" type="StaticBody2D" parent="."]
position = Vector2(-7, -344)
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D8"]
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D9" type="StaticBody2D" parent="."]
position = Vector2(-160, -408)
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D9"]
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D10" type="StaticBody2D" parent="."]
position = Vector2(-17, -384)
rotation = -0.636583
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D10"]
points = PackedVector2Array(177, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D11" type="StaticBody2D" parent="."]
position = Vector2(-798, -170)
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D11"]
points = PackedVector2Array(329, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D12" type="StaticBody2D" parent="."]
position = Vector2(-798, -200)
rotation = -0.402541
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D12"]
points = PackedVector2Array(329, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D13" type="StaticBody2D" parent="."]
position = Vector2(-802, -474)
rotation = 0.315823
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D13"]
points = PackedVector2Array(329, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="StaticBody2D15" type="StaticBody2D" parent="."]
position = Vector2(-483, -411)
rotation = 0.000249616
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D15"]
points = PackedVector2Array(329, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="Coin1" parent="." groups=["coins"] instance=ExtResource("8_udxdr")]
position = Vector2(-785, -177)

[node name="Coin2" parent="." groups=["coins"] instance=ExtResource("8_udxdr")]
position = Vector2(-509, -231)

[node name="Coin3" parent="." groups=["coins"] instance=ExtResource("8_udxdr")]
position = Vector2(75, -303)

[node name="Coin4" parent="." groups=["coins"] instance=ExtResource("8_udxdr")]
position = Vector2(-99, -473)

[node name="Coin5" parent="." groups=["coins"] instance=ExtResource("8_udxdr")]
position = Vector2(-249, -535)

[node name="Coin6" parent="." groups=["coins"] instance=ExtResource("8_udxdr")]
position = Vector2(-819, -557)

[node name="CoinLabel" type="Label" parent="."]
offset_left = -286.0
offset_top = -570.0
offset_right = -134.0
offset_bottom = -547.0
text = "Coins Collected: 0/6"
script = ExtResource("9_mxq74")

[node name="StaticBody2D16" type="StaticBody2D" parent="."]
position = Vector2(-804, -549)
rotation = 0.000249616
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D16"]
points = PackedVector2Array(329, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -804.0
offset_top = -549.0
offset_right = -764.0
offset_bottom = -509.0

[node name="StaticBody2D17" type="StaticBody2D" parent="."]
position = Vector2(14, -540)
rotation = 0.000249616
script = ExtResource("5_sifwv")

[node name="Line2D" type="Line2D" parent="StaticBody2D17"]
points = PackedVector2Array(329, 2, 42, 2)
width = 3.0
default_color = Color(0.321569, 0.568627, 0.933333, 1)

[node name="Gate1" parent="." instance=ExtResource("10_k3xxh")]
position = Vector2(-514, -581)

[node name="Gate2" parent="." instance=ExtResource("10_k3xxh")]
position = Vector2(309, -574)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -359.0
offset_top = -599.0
offset_right = -39.0
offset_bottom = -544.0
text = "You must collect all coins to escape!"

[node name="Label" type="Label" parent="."]
offset_left = -261.0
offset_top = -542.0
offset_right = -76.0
offset_bottom = -519.0
script = ExtResource("12_jrogi")

[node name="Timer" type="Timer" parent="Label"]

[node name="DelayTimer" type="Timer" parent="Label"]
